--- a/packages/beeq/src/components/button/scss/bq-button.variables.scss
+++ b/packages/beeq/src/components/button/scss/bq-button.variables.scss
@@ -21,17 +21,17 @@
   --bq-button--border-color: theme(borderColor.transparent);
   --bq-button--border-radius: theme(borderRadius.m);
   --bq-button--border-style: solid;
-  --bq-button--border-width: theme(borderWidth.0);
+  --bq-button--border-width: theme(borderWidth.m);
 
   --bq-button--small-paddingX: theme(spacing.xs);
-  --bq-button--small-paddingY: theme(spacing.xs2);
+  --bq-button--small-paddingY: calc(theme(spacing.xs2) - theme(borderWidth.m));
   --bq-button--small-font-size: theme(fontSize.m);
 
   --bq-button--medium-paddingX: theme(spacing.m);
-  --bq-button--medium-paddingY: theme(spacing.s);
+  --bq-button--medium-paddingY: calc(theme(spacing.s) - theme(borderWidth.m));
   --bq-button--medium-font-size: theme(fontSize.m);
 
   --bq-button--large-paddingX: theme(spacing.l);
-  --bq-button--large-paddingY: theme(spacing.m);
+  --bq-button--large-paddingY: calc(theme(spacing.m) - theme(borderWidth.m));
   --bq-button--large-font-size: theme(fontSize.m);
 }
